payment processiing system initial implementation
